--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leetcode Problems Soluation </title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
@@ -14,6 +15,9 @@
         - after click on problem go to solution images
 
     </p>
+    <!-- Js File -->
+
+    <script src="index.js"></script>
     
 </body>
 </html>
